[gd_scene load_steps=4 format=3 uid="uid://bmnvvhtxwm8gp"]

[ext_resource type="Texture2D" uid="uid://cfo7uut4gtu4q" path="res://addons/gov_plugin/back-forth_lorc.png" id="1_765yu"]
[ext_resource type="Script" path="res://addons/gov_plugin/slim_proj_container.gd" id="1_uhmpd"]
[ext_resource type="Texture2D" uid="uid://bq70765tlubea" path="res://addons/gov_plugin/hand-ok_delapouite.png" id="3_4s31e"]

[node name="PanelContainer" type="PanelContainer"]
script = ExtResource("1_uhmpd")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Folder Name"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="TotFiles" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Tot FIles"

[node name="TotSize" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Tot size"

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
visible = false
self_modulate = Color(0.537833, 1, 0.41, 1)
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 3
icon = ExtResource("1_765yu")
flat = true
icon_alignment = 1
expand_icon = true

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
modulate = Color(0.62, 0.898667, 1, 1)
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("3_4s31e")
expand_mode = 1
stretch_mode = 5

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Button" to="." method="_on_button_pressed"]
